[package]
name = "bondinary-common-lib"
version = "0.1.0"
edition = "2024"

[dependencies]

async-graphql = { version = "7.0.17", features = ["apollo_tracing", "url"] } # Federation support
async-graphql-rocket = "7.0.17" # Integration for Rocket
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
mime_guess = "2.0.5"
rocket-multipart-form-data = "0.10.7"
regex = "1.11.1"
tempfile = "3.18.0"
lettre = "0.11.14"
futures-util = "0.3.31"
rustls = "0.23.21"
rocket_firebase_auth = "0.5.0"
tokio-native-tls = "0.3.1"
native-tls = "0.2.13"
r2d2_redis = "0.14.0"
r2d2 = "0.8.10"
redis = { version = "0.27.0", features = ["tls", "tokio-comp", "tokio-native-tls-comp", "tls-native-tls"] }
async-openai = "0.28.0"
reqwest = { version = "0.11", features = ["multipart", "json"] } # reqwest with JSON parsing support
rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
serde_json = "1.0.88"
serde = "1.0.188"
serde_derive = "1.0.197"
serde_cbor = "0.11"
rand = "0.8.5"
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
dotenvy = "0.15.7"
uuid = { version= "1.5.0", features = ["serde", "v4"] }
hex = "0.4.2"
mongodb = { version = "2.2.0", default-features = false, features = ["sync"]}
tokio = { version = "1.35.0", features = ["full"] }
openssl = { version = "0.10", default-features = false } # no "vendored"
asn1 = "0.7"
chrono = "0.4"

