[package]
name = "common-lib"
version = "0.1.3"
edition = "2024"
publish = ["bondinary-bondinary-rust-crates"]

[dependencies]
tracing = "0.1.41"
hex = "0.4.2"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", default-features = false, features = ["json"] }
serde_json = "1.0.88"
serde = "1.0.188"
mongodb = { version = "3.2.3", default-features = false, features = ["rustls-tls", "dns-resolver", "compat-3-0-0"]}
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
aws-sdk-secretsmanager = "1.20.1"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
chrono = "0.4"
tokio = { version = "1.35.0", features = ["full"] }
rustls = "0.23.21"
schemars = { version = "1.0.1", features = ["chrono04"] }

